--- a/package.json
+++ b/package.json
@@ -41,5 +41,9 @@
   "dependencies": {
     "@rollup/plugin-image": "^2.1.1",
     "node-sass": "^7.0.1"
+  },
+  "peerDependencies": {
+    "react-colorful": "^5.5.1",
+    "classnames": "^2.3.1"
   }
 }
