--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rygaa/react-ui-component",
-  "version": "1.0.38",
+  "version": "1.0.64",
   "description": "My personal React component Library - tutorial",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -27,7 +27,7 @@
     "@types/react-calendar": "^3.5.3",
     "@types/react-datepicker": "^4.4.2",
     "@types/styled-components": "^4.1.19",
-    "classnames": "^2.3.1",
+    "classnames": "^2.3.2",
     "npm-run-all": "^4.1.5",
     "react-colorful": "^5.5.1",
     "rollup": "^1.25.0",
@@ -43,11 +43,9 @@
   "dependencies": {
     "@rollup/plugin-image": "^2.1.1",
     "node-sass": "^7.0.1",
+    "react": "^18.2.0",
     "react-calendar": "^3.9.0",
-    "react-datepicker": "^4.8.0"
-  },
-  "peerDependencies": {
-    "classnames": "^2.3.1",
-    "react-colorful": "^5.5.1"
+    "react-datepicker": "^4.8.0",
+    "react-dom": "^18.2.0"
   }
 }
