--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "node-sass": "^7.0.1",
     "react-calendar": "^3.9.0",
     "react-datepicker": "^4.8.0",
-    "react-select": "^5.7.0"
+    "react-select": "^5.7.0",
+    "react-tiny-popover": "^7.2.0"
   }
 }
